Minor fix to add whitespace at bottom of portrait mobile build

--- a/index.css
+++ b/index.css
@@ -205,4 +205,7 @@ h2 {
         line-height:66vh;
         transform:rotate(12deg);
     }
+    #box7 {
+        margin-bottom: 10%;
+    }
 }
